# statik

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  team_prompt.md
.statik/: rules.toml
benchmarks/: README.md  compare_results.py  generate_projects.py  results_after_20260221_085725.txt  results_baseline_20260220_225240.txt  run_benchmarks.sh
docs/architecture/: ARCHITECTURE.md
examples/: ts_debug.rs
src/: lib.rs  main.rs
src/analysis/: cycles.rs  dead_code.rs  dependencies.rs  diff.rs  impact.rs  mod.rs
src/cli/: commands.rs  index.rs  mod.rs  output.rs
src/db/: mod.rs
src/discovery/: mod.rs
src/linting/: baseline.rs  config.rs  matcher.rs  mod.rs  rules.rs
src/model/: file_graph.rs  graph.rs  mod.rs
src/parser/: java.rs  mod.rs  rust.rs  typescript.rs
src/resolver/: java.rs  mod.rs  rust.rs  tsconfig.rs  typescript.rs
test-fixtures/: EXPECTED_RESULTS.md  generate-perf-test.sh
test-fixtures/barrel-exports/: tsconfig.json
test-fixtures/barrel-exports/src/: index.ts
test-fixtures/basic-project/: tsconfig.json
test-fixtures/basic-project/src/: index.ts
test-fixtures/circular-deps/src/: index.ts  moduleA.ts  moduleB.ts  selfRef.ts  triangleX.ts  triangleY.ts  triangleZ.ts
test-fixtures/dynamic-imports/src/: index.ts  router.ts
test-fixtures/edge-cases/: tsconfig.json
test-fixtures/monorepo/: tsconfig.json
test-fixtures/no-dead-code/: tsconfig.json
tests/: cli_tests.rs  integration.rs  java_integration.rs  rust_integration.rs
tests/integration/: cli_tests.rs
(+469 files in other folders)
