[package]
name = "statik"
version = "0.1.0"
edition = "2021"
description = "Deep symbol-level code analysis CLI tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1.10"
globset = "0.4"
ignore = "0.4"
anyhow = "1"
regex = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
